Add button to start chat polling

--- a/app/views/interaction_web_tools/partials/_chat.html.erb
+++ b/app/views/interaction_web_tools/partials/_chat.html.erb
@@ -1,4 +1,5 @@
 <div class='chat'>
+  <%= link_to :start_chat, '#', class: 'chat-start' %>
   <div class='chat-messages'>
   </div>
   <%= form_tag nil, class: 'chat-message-form' do %>
