Implement stop polling

--- a/app/views/interaction_web_tools/partials/_chat.html.erb
+++ b/app/views/interaction_web_tools/partials/_chat.html.erb
@@ -6,4 +6,5 @@
     <%= text_field_tag 'content', nil, class: 'chat-message-input' %>
     <%= submit_tag :send, class: 'chat-message-submit' %>
   <% end %>
+  <%= link_to :stop_chat, '#', class: 'chat-stop' %>
 </div>
