--- a/app/views/interaction_web_tools/partials/_chat.html.erb
+++ b/app/views/interaction_web_tools/partials/_chat.html.erb
@@ -1,7 +1,7 @@
 <div class='chat'>
   <div class='chat-controls'>
-    <%= link_to :start_chat, '#', class: 'chat-start' %>
-    <%= link_to :stop_chat, '#', class: 'chat-stop' %>
+    <%= link_to 'Customer support', '#', class: 'chat-start' %>
+    <%= link_to '&times;'.html_safe, '#', class: 'chat-stop' %>
   </div>
 
   <div class='chat-body'>
