Update chat title background color

--- a/app/assets/stylesheets/interaction_web_tools/variables.scss
+++ b/app/assets/stylesheets/interaction_web_tools/variables.scss
@@ -1,4 +1,4 @@
-$chat-title-background: #9c0;
+$chat-title-background: #54a70b;
 $chat-title-text: #fff;
 $chat-window-background: #fff;
 $chat-window-text: #333;
