--- a/app/assets/stylesheets/interaction_web_tools/chat.scss
+++ b/app/assets/stylesheets/interaction_web_tools/chat.scss
@@ -39,12 +39,13 @@
   }
 
   .message-webuser, .message-agent {
-    position:relative;
-    padding:15px;
+    position: relative;
+    padding: 0.3em 0.5em;
     margin: 0.5em;
     color: $chat-bubble-text;
     background: $chat-bubble-background;
     border-radius: 10px;
+    word-break: break-all;
   }
 
   .message-webuser {
