Change customer service text to i18n in partial

--- a/app/views/interaction_web_tools/partials/_chat.html.erb
+++ b/app/views/interaction_web_tools/partials/_chat.html.erb
@@ -1,6 +1,6 @@
 <div class='chat'>
   <div class='chat-controls'>
-    <%= link_to 'Customer support', '#', class: 'chat-start' %>
+    <%= link_to t(:customer_service), '#', class: 'chat-start' %>
     <%= link_to '&times;'.html_safe, '#', class: 'chat-stop' %>
   </div>
 
