Replace input with textarea
- add support to multi-line text
- submit on enter keyup
- add newline on shift-enter

--- a/app/views/interaction_web_tools/partials/_chat.html.erb
+++ b/app/views/interaction_web_tools/partials/_chat.html.erb
@@ -9,7 +9,7 @@
     </div>
 
     <%= form_tag nil, class: 'chat-message-form' do %>
-      <%= text_field_tag 'content', nil, class: 'chat-message-input' %>
+      <%= text_area_tag 'content', nil, class: 'chat-message-input' %>
     <% end %>
   </div>
 </div>
