--- a/app/assets/stylesheets/interaction_web_tools/chat.scss
+++ b/app/assets/stylesheets/interaction_web_tools/chat.scss
@@ -66,6 +66,8 @@
   .chat-message-input {
    width: 22em; 
    margin-bottom: 0;
+   border: 1px solid darken($chat-title-background, 5%);
+   border-radius: 5px;
   }
 
   .chat-message-submit {
