--- a/app/assets/stylesheets/interaction_web_tools/chat.scss
+++ b/app/assets/stylesheets/interaction_web_tools/chat.scss
@@ -11,7 +11,18 @@
   border: 1px solid darken($chat-title-background, 5%);
   border-bottom: none;
 
-  .chat-controls {
+  &.active {
+    .controls {
+      .close {
+        display: inline;
+      }
+    }
+    .chat-body {
+      display: block
+    }
+  }
+
+  .controls {
     background-color: $chat-title-background;
     padding: 0.5em;
     color: $chat-title-text;
@@ -19,10 +30,19 @@
     a {
       &:hover, &:link, &:active, &:visited {
         color: $chat-title-text;
-        text-decoration: none;        
-      } 
+        text-decoration: none;
+      }
     }
- }
+
+    .open, .close {
+      text-decoration: none;
+    }
+
+    .close {
+      float: right;
+      display: none;
+    }
+  }
 
   .chat-messages {
     overflow-y: scroll;
@@ -32,9 +52,9 @@
 
   .chat-message-form {
     margin: 0.25em !important;
-}
+  }
 
-  .chat-body, .chat-stop {
+  .chat-body {
     display: none;
   }
 
@@ -64,21 +84,13 @@
   }
 
   .chat-message-input {
-   width: 22em; 
-   margin-bottom: 0;
-   border: 1px solid darken($chat-title-background, 5%);
-   border-radius: 5px;
+    width: 22em;
+    margin-bottom: 0;
+    border: 1px solid darken($chat-title-background, 5%);
+    border-radius: 5px;
   }
 
   .chat-message-submit {
-    float: rigth;
-  }
-
-  .chat-start, .chat-stop {
-    text-decoration: none;
-  }
-
-  .chat-stop {
     float: right;
   }
 }
