--- a/app/views/interaction_web_tools/partials/_chat.html.erb
+++ b/app/views/interaction_web_tools/partials/_chat.html.erb
@@ -1,15 +1,26 @@
-<div class='chat'>
-  <div class='chat-controls'>
-    <%= link_to t(:customer_service), '#', class: 'chat-init' %>
-    <%= link_to '&times;'.html_safe, '#', class: 'chat-stop' %>
+<div id="chat-ui" class='chat'>
+  <div class="indicator">
+    <div></div><div></div><div></div>
+  </div>
+
+  <div class='controls'>
+    <%= link_to t('chat.top_bar.heading'), '#', class: 'open' %>
+    <%= link_to '&times;'.html_safe, '#', class: 'close' %>
   </div>
 
   <div class='chat-body'>
-    <div class='chat-messages'>
+    <div class="welcome">
+      <h2><%= t('chat.welcome.header') %></h2>
+      <p>
+        <%= t('chat.welcome.intro') %>
+      </p>
     </div>
 
-    <%= form_tag nil, class: 'chat-message-form' do %>
-      <%= text_area_tag 'content', nil, class: 'chat-message-input' %>
-    <% end %>
+    <div class='chat-messages'>
+    </div>
   </div>
+
+  <%= form_tag nil, class: 'chat-message-form' do %>
+      <%= text_area_tag 'content', nil, class: 'chat-message-input', placeholder: t('chat.message_placeholder') %>
+  <% end %>
 </div>
